2009-06-04  Larry Ewing  <lewing@novell.com>

	* canvas.cpp (OnCollectionItemChanged): call
	InvalidateSubtreePaint on items when their position in the canvas
	changes to make sure we clear the old region.  Fixes a couple of
	the inkpresenter tests.

2009-06-04  Larry Ewing  <lewing@novell.com>

	* shape.cpp (ComputeStretchBounds): reject negative width/height
	settings.  Fixes test-shape-negative.xaml

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* multiscaleimage.cpp: Add a debugging abort to try to find the
	issue with #2014.

2009-06-04  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* type-generated.cpp: Actually add IsEnabledChangedEvent

2009-06-04  Alan McGovern  <amcgovern@novell.com>

	* control.h: Add IsEnabledChangedEvent to native
	
	* type-generated.cpp: regen

2009-06-04  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: qtree_insert () takes no value. returns
	the newly created QTreeNode. qtree_insert_at () renamed to 
	qtree_insert_with_value ().

2009-06-03  Alan McGovern  <amcgovern@novell.com>

	* cbinding.cpp|h:
	* control.cpp|h:
	* runtime.cpp:
	* uielement.cpp|h: Calling Control.Focus () results in a recursive
	check to find a focusable element. A mouse click does a non-recursive
	check on the elements which were 'hit'. Fixes two DRTs.

2009-06-03  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Update some error messages.
	- Pass the current namespace in when creating property infos in
	managed.
	* frameworkelement.h: ActualWidth and ActualHeight are readonly
	properties.
	* dependencyproperty.g.cpp: regen

2009-06-03  Jeffrey Stedfast  <fejj@novell.com>

	* font.cpp (GetCharIndex): Use FcFreeTypeCharIndex() which does a
	bit more than FT_Get_Char_index().

	* layout.cpp (TextLayout::Layout): Silverlight 2.0 /never/ counts
	trailing lwsp towards line width, even if underlined.
	(TextLayoutGlyphCluster::Render): Don't underline trailing lwsp if
	we are the last glyph cluster on a line.