@@ -1,3 +1,8 @@
+2009-06-04  Jackson Harper  <jackson@ximian.com>
+
+	* xaml.cpp: The managed property could be either the property or
+	the parent.
+
 2009-06-04  Larry Ewing  <lewing@novell.com>
 
 	* canvas.cpp (OnCollectionItemChanged): call
